--- a/gitlab-host.yml
+++ b/gitlab-host.yml
@@ -2,16 +2,13 @@
   id: gitlab-apps
   body:
     - !group
-
     - &hosts
       - !host
         id: demos
         annotations:
-          authn-jwt/gitlab/project_id: 2
-          authn-jwt/gitlab/ref: master
-          authn-jwt/gitlab/project_path: demos/hello-ci
-
-
+          authn-jwt/$CONJUR_AUTHENTICATOR_ID/project_id: 2
+          authn-jwt/$CONJUR_AUTHENTICATOR_ID/ref: master
+          authn-jwt/$CONJUR_AUTHENTICATOR_ID/project_path: demos/hello-ci
     - !grant
       role: !group
       members: *hosts
