--- a/gitlab-grants.yml
+++ b/gitlab-grants.yml
@@ -1,3 +1,3 @@
 - !grant
-  role: !group conjur/authn-jwt/gitlab/apps
+  role: !group conjur/authn-jwt/$CONJUR_AUTHENTICATOR_ID/apps
   member: !group gitlab-apps
