--- a/authn-jwt-gitlab.yml
+++ b/authn-jwt-gitlab.yml
@@ -1,38 +1,29 @@
 - !policy
-  id: conjur/authn-jwt/$CONJUR_AUTHENTICATOR_ID
-  body:
+    id: conjur/authn-jwt/$CONJUR_AUTHENTICATOR_ID
+    body:
     - !webservice
-      #Mandatory variable: The JWT provider URI
-      #Uncomment either 'public-keys' OR 'jwks-uri'
-      #- !variable
-      #    id: public-keys
-      #- !variable jwks-uri
-    #Optional variables
-    #Uncomment one or all of the following optional variables.
-    #Note: If you uncomment 'token-app-property' you must also uncomment 'identity-path',
-    #and vice versa;
     - !variable public-keys
     - !variable issuer
     - !variable token-app-property
     - !variable identity-path
-    #- !variable
-    #    id: enforced-claims
-    #- !variable
-    #    id: claim-aliases
-    #- !variable
-    #    id: audience
+
     #Group of applications that can authenticate using this JWT Authenticator
     - !group apps
     - !permit
-      role: !group apps
+      role: !group /$APP_GROUP
       privilege: [ read, authenticate ]
       resource: !webservice
     - !webservice
-      id: status
+        id: status
+
     #Group of users who can check the status of the JWT Authenticator
     - !group
-      id: operators
+        id: operators
     - !permit
-      role: !group operators
-      privilege: [ read ]
-      resource: !webservice status
+        role: !group operators
+        privilege: [ read ]
+        resource: !webservice status
+
+- !grant
+  role: !group conjur/authn-jwt/$CONJUR_AUTHENTICATOR_ID/apps
+  member: !group $APP_GROUP
